1s - Improved lots of stuff for the model

--- a/notebooks/1-introduction_shorter/requirements.txt
+++ b/notebooks/1-introduction_shorter/requirements.txt
@@ -1,10 +1,17 @@
-geopandas
 matplotlib
+
 numpy
 pandas
-rasterio
+
 requests
+owslib
+
+rasterio
+geopandas
 shapely
+
 tqdm
+
 ipykernel
 ipywidgets
+ipympl
